assets/css/style.css
@import url('https://fonts.googleapis.com/css?family=Dosis:200,400,600&display=swap');

* {
    margin: 0;
    padding: 0;
    font-family: 'Dosis', sans-serif;
}

/* ELEMENT TAGS */
body, html {
    height: 100%;      
}

body {
    background: #ffffff;
    position: relative;
    -webkit-font-smoothing: antialiased;
}

html {
	scroll-behavior: smooth;
}

section {
    max-height: 100%;
    width: auto;
    font-weight: 400;
    color: #2a3039;
    z-index: 1;
    position: relative;
    padding-top: 5%;
}

h2 {
    font-family: 'Dosis', sans-serif;
    font-size: 50px;
    text-transform: uppercase;
    color: #12171C;
    opacity: .9;
}

*::selection {
    background: #000;
    color: #ffffff;
  }

*::-moz-selection {
    background: #000;
    color: #ffffff;
}
/* END OF ELEMENT TAGS */
/* SECTIONS */

/* NAV */

.start-nav, .start-nav a {
	transform: translateY(0);
    padding: 10px 0;
	-webkit-transition : all 0.6s ease-in-out;
    transition : all 0.6s ease-in-out;
    color: rgb(22, 22, 22);
    opacity: 0.9;
}

.on-scroll-nav {
    background-color: #12171C!important;
    opacity: .85;
    padding: 7px 0;
	-webkit-transition : all 0.6s ease-in-out;
	transition : all 0.6s ease-in-out;
}

.on-scroll-nav a {
    color: #ffffff;
}

.navbar-brand {
    font-weight: 400;
    font-size: 35px;
    text-align: center;
    letter-spacing: 4px;
    text-transform: capitalize;
    margin-left: 10%;
}

.inner-nav {
    display: inline-block;
    position: relative;
}

.inner-nav ul{
    float: right;
    margin: auto;
    font-size: 15px;
    font-weight: 400;
    letter-spacing: 2px;
    text-transform: uppercase;
    text-align: center;
    line-height: 1.5;
}
.inner-nav ul li {
    float: left;
    margin-left: 40px;
    position: relative;
}

/* END OF NAV */

#home {
    text-transform: uppercase;
    letter-spacing: 15px;
    font-weight: 200;
    font-size: 35px;
    opacity: .9;
    height: 100%;
    color: #ffffff;
}

.parallax-home {
    background-image: url("../images/isaac-guido-banner.jpg");
    /* background: #12171C; */
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
  }

.home-text {
    margin-top: 10%;
    text-align: center;
}

.home-text h1 {
    font-size: 55px;
    padding: 10px;
    text-shadow: 1px 1px 1px rgba(165, 165, 165, 0.8);
}

/* Rotating text effect for Home Page */
.rtxt{
    text-shadow: 1px 1px 1px rgba(255,255,255,0.8);
    text-align: center;
    color: #ffffff;
    font-weight: 200;
}

.rtxt span{
    position: absolute;
    top: 0;
    left: 25%;
	opacity: 0;
    overflow: hidden;
    /* 3 sec for each word */
	-webkit-animation: rotateWord 12s linear infinite 0s;
	-ms-animation: rotateWord 12s linear infinite 0s;
    animation: rotateWord 12s linear infinite 0s;
}

.rtxt span:nth-child(2) { 
    -webkit-animation-delay: 3s; 
	-ms-animation-delay: 3s; 
	animation-delay: 3s;
}

.rtxt span:nth-child(3) { 
    -webkit-animation-delay: 6s; 
	-ms-animation-delay: 6s; 
	animation-delay: 6s;
}

.rtxt span:nth-child(4) { 
    -webkit-animation-delay: 9s; 
	-ms-animation-delay: 9s; 
	animation-delay: 9s;
}


/* For 2 more span texts */

/* .rtxt span:nth-child(5) { 
    -webkit-animation-delay: 12s; 
	-ms-animation-delay: 12s; 
	animation-delay: 12s;
}
.rtxt span:nth-child(6) { 
    -webkit-animation-delay: 15s; 
	-ms-animation-delay: 15s; 
	animation-delay: 15s;
} */

@-webkit-keyframes rotateWord {
    0% { opacity: 0; }
    2% { opacity: 0; -webkit-transform: translateY(-30px); }
	8% { opacity: 1; -webkit-transform: translateY(0px);}
    18% { opacity: 1; -webkit-transform: translateY(0px); }
	25% { opacity: 0; -webkit-transform: translateY(30px); }
    100% { opacity: 0; }
}

@-ms-keyframes rotateWord {
    0% { opacity: 0; }
    2% { opacity: 0; -ms-transform: translateY(-30px); }
	8% { opacity: 1; -ms-transform: translateY(0px);}
    18% { opacity: 1; -ms-transform: translateY(0px); }
	25% { opacity: 0; -ms-transform: translateY(30px); }
    100% { opacity: 0; }
}

@keyframes rotateWord {
    0% { opacity: 0; }
    2% { opacity: 0; -webkit-transform: translateY(-30px); transform: translateY(-30px); }
	8% { opacity: 1; -webkit-transform: translateY(0px); transform: translateY(0px);}
    18% { opacity: 1; -webkit-transform: translateY(0px); transform: translateY(0px); }
    25% { opacity: 0; -webkit-transform: translateY(30px); transform: translateY(30px); }
    100% { opacity: 0; }

}

/* END OF HOME */

/* START OF ABOUT */

#about  {
    background: #ffffff;
    color: #373737;
    font-size: 25px;
    height: 100%;
}

#about p {
    font-size: 20px;
    font-weight: 400;
    margin: 5px;
    color: #373737;
}

#about h4 {
    margin: 5px;
    letter-spacing: 4px;
}

#about img {
    width: 300px;
    height: auto;
    margin: 0px 5px 20px 5px;
}

/* END OF ABOUT */

/* START OF SKILLS */
#skills {
    background: #ffffff;
    color: #12171C;
    height: 70%;
}

.angled-v1 {
    position:absolute;
    display:block;
    right: 0;
    top:0;
    width:100%;
    height: 200px;
    border-style: solid;
    border-width: 0 100vw 100px 100px;
    border-color: transparent#52abe691 transparent transparent;
  }
  
  #spacer-top {
      margin-top: 5%;
  }
  
  .skill-tree li{
    margin: 10px;
    list-style-type: none;
    font-size: 20px;
    font-weight: 400;
}

  .angled-v2 {
    position:absolute;
    display:block;
    right:0;
    bottom:-50px;
    height: 200px;
    width:100%;
    border-style: solid;
    border-width: 0 100vw 0 100px;
    border-color: transparent #52abe691 transparent transparent;
    transform:rotate(2deg);
  }

/* END OF SKILLS */

/* START OF PROJECTS */
#projects {
    background: #ffffff;
    color: #000000;
    height: 100%;
}

.project-card {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
    margin: 10px;
    text-align: center;
    background: rgb(9,45,121);
    background: linear-gradient(49deg, rgba(9,45,121,1) 0%, rgba(189,244,255,1) 80%);
    color: white;
}

/* END OF PROJECTS */
#contact {
    background: #ffffff;
    color: #000000;
    height: 60%;
}

#contact form {
    margin-bottom: 10px;
}

#contact h2 {
    margin-bottom: 25px;
}

i.fas {
    font-size: 12px;
    opacity: .8;
}

i.fa-info-circle {
    font-size: 12px;
    opacity: .5;
}
/* END OF CONTACT */
a.to-top {
    position: absolute;
    bottom: 20px;
    right: 20px;
    width: 40px;
    height: 40px;
    line-height: 40px;
    text-align: center;
    color: rgba(0,0,0, .2);
    font-size: 45px;
    z-index: 2;
}

a.to-top:hover {
    color: rgba(0, 0, 0, 0.8);
}

/* END OF SCROLL */
#footer {
    background: #12171C;
    color: #000000;
    height: 6%;
    padding-top: 10px;
}

.social a{
    padding-left: 10px;
    padding-right: 10px;
    font-size: 25px;
    text-decoration: none;
}
/* END OF SECTIONS */
/* MARGIN CLASSES */
.mt-50 {
    margin-top: 50px;
}

.mb-50 {
    margin-bottom: 50px;
}

/* END OF MARGIN */
/* MAPBOX */

.hidden-map {
    width: 100%;
    height: 100%;
    position: absolute;
    bottom: 0;
    left: 0;
    padding: 0 !important;
    background: rgba(17,17,17, .75);
    z-index: 2;
    cursor: pointer;
    -webkit-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
    -moz-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
    -o-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
    -ms-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
    transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
}

.hidden-map.active-map {
    height: 30px;
    background: rgba(17,17,17, .75);
}

.mapbox {
    height: 40%;
}

.map-text {
    z-index: auto;
    text-align: center;
    color: #ffffff;
}

.display-off {
    display: none;
}

#map {
    top: 0; 
    bottom: 0; 
    width: 100%;
}

.marker {
    background-image: url('../images/pin.png');
    background-size: cover;
    width: 40px;
    height: 40px;
    border-radius: 50%;
    cursor: pointer;
  }
/* END OF MAPBOX */
/* OTHER */

.relative {
    position: relative;
}

.absolute {
    position: absolute;
}

/* START OF MEDIA SCREENs */

@media screen and (max-width: 767px) {
	nav ul {
		flex-direction: column;
	}
 
	nav li {
		margin-top: 1px;
	}
  
  nav li a {
    font-size: 1.5em;
  }
  
  .scroll-icon {
    display: none;
  }
}
 
@media screen and (max-width: 320px) {

    h2 {
        font-size: 30px;
    }

    #about {
        height:
    }

    .open-menu ~ nav {
		padding: 20px 0;
	}
 
	nav li a {
		padding: 3px;
    }
    
    .navbar-brand {
        margin-left: 20%;
        width: 200px;
    }

    .rtxt {
        font-size: 15px;
        width: 280px;
    }

    
}

